Fix number alignment in font

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ html[lang="ar"] {
 
 html {
   font-family: var(--font-sans), sans-serif;
+  font-variant-numeric: lining-nums;
+  font-feature-settings: "lnum" 1, "lnum", "lnum";
 }
 
 main {
